<resources>
    <string name="app_name">AppTreino</string>

    <string name="home_fragment">Hello Fulano</string>
    <string name="create_account_fragment">Hello Create Account fragment</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirmar senha</string>


    <string name="e_mail_or_password_empty">E-mail ou senha não pode ser vazio</string>
    <string name="unknown_error">Erro desconhecido</string>
    <string name="email_or_senha_incorrect">E-mail ou senha incorretos</string>
    <string name="email_already_registered">E-mail já cadastrado</string>
    <string name="invalid_email">E-mail invalido</string>
    <string name="password_must_be_more_characters">Senha deve ter mais de 6 digitos</string>
    <string name="fail_auth">Erro durante a autenticação</string>
    <string name="email_required">E-mail é obrigatório</string>
    <string name="password_required">senha é obrigatória</string>
    <string name="registration_completed_successfully">Cadastro realizado com sucesso</string>
    <string name="register_failed">Ocorreu uma falha no cadastro</string>
    <string name="different_passwords">Senhas diferentes</string>
    <string name="password_confirmation_is_required">Confirmação da senha é necessaria</string>
    <string name="treino_desc">Descrição</string>
    <string name="save_btn">Salvar</string>
    <string name="register_btn">Cadastrar</string>
    <string name="date">Data</string>
    <string name="fail_save_treino">falha ao salvar o treino</string>
    <string name="fail_save_exercicio">falha ao salvar o exercicio</string>
    <string name="empty_fields">Preecha todos os campos antes de salvar</string>
    <string name="exercise_observation_hint">observação</string>
    <string name="create_new_exercise_btn">adicionar novo exercicio</string>
</resources>